--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -115,6 +115,19 @@
             </section>
             <!-- about section ends -->
 
+            <!-- skills section starts -->
+            <section class="skills" id="skills">
+
+                <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
+
+                <div class="container">
+                    <div class="row" id="skillsContainer">
+
+                    </div>
+                </div>
+                
+            </section>
+            <!-- skills section ends -->
 
         </div>
     </div>
