color codes changes updated hero section color

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,24 +29,24 @@
                 <!-- <div id="menu" class="fas fa-bars"></div> -->
                 <div class="tags">
                     <ul>
-                    <li><a class="active" href="http://127.0.0.1:5500/portfolio/index.html">Home</a></li>
-                    <li><a href="http://127.0.0.1:5500/portfolio/Experience.html" class="navB">Experience</a></li>
-                    <li><a href="http://127.0.0.1:5500/portfolio/Projects.html" class="navB">Projects</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="#about" class="navB">About</a></li>
+                    <li><a href="#skills" class="navB">Skills</a></li>
                     <li><a class="navB" href="http://127.0.0.1:5500/portfolio/Research.html">Research</a></li>
-                    <li><a class="navB" href="http://127.0.0.1:5500/portfolio/Education.html">Educations</a></li>
-                    <li><a class="navB" href="http://127.0.0.1:5500/portfolio/Blog.html">Blog</a></li>
-                    <li><a class="navB" href="http://127.0.0.1:5500/portfolio/Resume.html">Resume</a></li>
-                    <li><a class="navB" href="#1">Let's Connect</a></li>
+                    <li><a class="navB" href="#education">Educations</a></li>
+                    <li><a class="navB" href="#work">Projects</a></li>
+                    <li><a class="navB" href="#experience">Experience</a></li>
+                    <li><a class="navB" href="#contact">Let's Connect</a></li>
                     </ul>
                 </div>
-                <a href="#1"><button class="btn" >Hire me</button></a>
+                <a href="#contact"><button class="btn" >Hire me</button></a>
             </nav>    
             <br>
         </div>
         <!-- <br><br><br><br><br><br> -->
 
         <!-- main section -->
-        <div class="main ">
+        <div class="main " id="main">
             <!-- hero section -->
             <div id="particles-js"></div>
 
@@ -67,9 +67,9 @@
                     </ul>
                   </div>
                 </div>
-            <div class="image">
-                <img draggable="false" class="tilt" src="images/hero.png" alt="">
-            </div>
+                <div class="image">
+                    <img draggable="false" class="tilt" src="images/hero.png" alt="">
+                </div>
             </div>
             <!-- hero section ends -->
 
@@ -333,7 +333,7 @@
   
         <div class="box">
             <h3>quick links</h3>
-            <a href="#home"><i class="fas fa-chevron-circle-right"></i> home</a>
+            <a href="#main"><i class="fas fa-chevron-circle-right"></i> home</a>
             <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
             <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
             <a href="#education"><i class="fas fa-chevron-circle-right"></i> education</a>
