completed just email lnking with form left

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,13 +26,12 @@
                     <a href="http://127.0.0.1:5500/portfolio/index.html"><img src="./images/shashwat1.jpg" style="border-radius: 10px;" width="100px" id="hi" alt="" srcset=""></a>
                 </div>
                 
-                <!-- <div id="menu" class="fas fa-bars"></div> -->
+                
                 <div class="tags">
                     <ul>
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="#about" class="navB">About</a></li>
-                    <li><a href="#skills" class="navB">Skills</a></li>
-                    <li><a class="navB" href="http://127.0.0.1:5500/portfolio/Research.html">Research</a></li>
+                    <li><a  class="navB" href="#about">About</a></li>
+                    <li><a  class="navB" href="#skills">Skills</a></li>
                     <li><a class="navB" href="#education">Educations</a></li>
                     <li><a class="navB" href="#work">Projects</a></li>
                     <li><a class="navB" href="#experience">Experience</a></li>
@@ -40,6 +39,7 @@
                     </ul>
                 </div>
                 <a href="#contact"><button class="btn" >Hire me</button></a>
+                <div id="menu" class="fas fa-bars"></div>
             </nav>    
             <br>
         </div>
