--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -106,7 +106,7 @@
                         </div>
                         
                         <div class="resumebtn">
-                            <a href="https://drive.google.com/file/d/1HtpJceFP5AbS90mdadT0eZKqslVPN3s8/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
+                            <a href="https://drive.google.com/file/d/1M-gH_2RLnDtEnRClgzl85rVYEKgFbGNd/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
                                 <i class="fas fa-chevron-right"></i>
                             </a>
                         </div>
