--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -86,15 +86,11 @@
                     </div>
                     <div class="content">
                         <h3>I'm Shashwat</h3>
-                        <span class="tag">Frontend Developer</span>
+                        <span class="tag">Full Stack Developer</span>
                         
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Asperiores aliquid nam fuga ipsa earum?
-                            Perspiciatis eaque ex possimus blanditiis veniam consequatur mollitia quam dolorem reiciendis?
-                            Laborum iusto quos dignissimos veniam dolorem modi dolores perferendis nesciunt corporis voluptas obcaecati,
-                            ducimus quam, maiores voluptatibus, nisi assumenda temporibus
-                            nemo autem excepturi consequuntur! Excepturi?
+                            I'm a Full Stack Developer and UI/UX Designer, based in Delhi. My journey revolves around transforming innovative concepts into digital realities, and I'm currently grinding on the MERN Stack. When I'm not coding or designing, you'll find me traveling and exploring. I thrive on taking up challenges in this dynamic field, confident that I will surely achieve all my dreams! 😎✈️💪🌟
+
 
                         </p>
                         
