--- a/portfolio/projects/index.html
+++ b/portfolio/projects/index.html
@@ -30,7 +30,7 @@
                 <li><a class="navB" href="../index.html">Let's Connect</a></li>
             </ul>
         </div>
-        <a href="#contact"><button class="btn" >Hire me</button></a>
+        <a href="../index.html"><button class="btn" >Hire me</button></a>
         <!-- <div id="menu" class="fas fa-bars"></div> -->
     </nav>    
     <br>
