--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -304,7 +304,7 @@
                             <div class="button-area">
                                 
                                     <button type="submit">
-                                        <a href="mailto:shashwatsri27@gmail.com">
+                                        <a >
                                         Submit <i class="fa fa-paper-plane"></i>
                                     </a>
                                     </button>
@@ -384,10 +384,10 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
 
-    <!-- <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
-    ></script> -->
+    <script
+        type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
 
     <script src="assets/js/script.js"></script>
 
