--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -207,6 +207,18 @@
             
                 <div class="timeline">
             
+                    <div class="container left">
+                        <div class="content">
+                            <div class="tag">
+                                <h2>SONY INDIA</h2>
+                            </div>
+                            <div class="desc">
+                                <h3>Technical Support Engineer | Bravia Expert </h3>
+                                <p>April 2024 - Present</p>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="container right">
                         <div class="content">
                             <div class="tag">
